--- a/gb/25/7/5/n14545455.md
+++ b/gb/25/7/5/n14545455.md
@@ -36,7 +36,6 @@
 <p>资料更新时间：2025年7月5日晚间10时4分</p>
 <p>责任编辑：林妍#</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
@@ -49,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/15/n11115255.md#1" target="_blank">美国人权报告 中国章节一值得关注的进展</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
