--- a/gb/25/7/5/n14545455.md
+++ b/gb/25/7/5/n14545455.md
@@ -8,19 +8,19 @@
 <hr>
 	<p>【大纪元2025年07月05日讯】（大纪元记者钟元台湾报导）台湾中央气象署今天（5日）晚间8时30分发布陆上台风警报。台湾中央大学大气科学系兼任副教授吴德荣指出，台风丹娜丝6日、7日对台湾构成严重威胁。</p>
 <p>目前台湾各县市7月6日停班停课状况如下：</p>
-<p>基隆市：尚未列入警戒区<br />
-台北市：尚未列入警戒区<br />
-新北市：尚未列入警戒区<br />
-桃园市：尚未列入警戒区<br />
-新竹市：尚未列入警戒区<br />
-新竹县：尚未列入警戒区</p>
-<p>宜兰县：尚未列入警戒区<br />
-花莲县：尚未列入警戒区<br />
-台东县：正常上班、正常上课</p>
-<p>苗栗县：尚未列入警戒区<br />
-台中市：正常上班、正常上课<br />
-彰化县：正常上班、正常上课<br />
-云林县：正常上班、正常上课<br />
+<p>基隆市：正常上班、正常上课<br />
+台北市：正常上班、正常上课<br />
+新北市：正常上班、正常上课<br />
+桃园市：正常上班、正常上课<br />
+新竹市：正常上班、正常上课<br />
+新竹县：正常上班、正常上课</p>
+<p>宜兰县：正常上班、正常上课<br />
+花莲县：正常上班、正常上课<br />
+台东县：正常上班、正常上课<strong>｜兰屿乡下午1时起停止上班、停止上课</strong></p>
+<p>苗栗县：正常上班、正常上课<br />
+台中市：<strong>下午6时以后停止上班、停止上课</strong><br />
+彰化县：<strong>下午6时以后停止上班、停止上课</strong><br />
+云林县：<strong>下午6时以后停止上班、停止上课</strong><br />
 南投县：正常上班、正常上课</p>
 <p>嘉义市：<strong>停止上班、停止上课</strong><br />
 嘉义县：<strong>停止上班、停止上课</strong><br />
@@ -29,21 +29,26 @@
 屏东县：<strong>停止上班、停止上课</strong><br />
 澎湖县：<strong>中午12时以后停止上班、停止上课</strong></p>
 <p>连江县：尚未列入警戒区<br />
-金门县：尚未列入警戒区</p>
+金门县：正常上班、正常上课</p>
 <div class="article">
 <div class="titles">停班停课资讯以<ahref="https://www.dgpa.gov.tw/">行政院人事行政总处</a>公布为准。</div>
 <div id="artbody" class="post_content">
-<p>资料更新时间：2025年7月5日晚间10时4分</p>
+<p>资料更新时间：2025年7月6日下午3时40分</p>
 <p>责任编辑：林妍#</p>
 </div>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/16/n14532074.md#1">台风季将至 台消防署盘点184处易成灾害孤岛地区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534581.md#1">台风汛期来临 政院灾防办：导入AI精准预警淹水区</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536724.md#1">台风圣帕生成 台气象署预估朝日本方向移动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543720.md#1">台风木恩生成 气象专家：续观察菲东热带扰动</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/18/n11052730.md#1" target="_blank">王友群：按邓小平的说法 中共早该下台了</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11287543.md#1" target="_blank">纽约市七位市议员祝贺法轮大法日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
